--- a/practice-one/package.json
+++ b/practice-one/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.9.3",
-    "parcel-bundler": "^1.12.5"
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.3.1",
+    "posthtml": "^0.16.6",
+    "posthtml-expressions": "^1.11.1",
+    "posthtml-include": "^1.7.4",
+    "posthtml-load-config": "^2.0.0"
   }
 }
