--- a/practice-one/package.json
+++ b/practice-one/package.json
@@ -1,23 +1,17 @@
 {
   "name": "practice-one",
-  "version": "1.0.0",
-  "description": "",
   "source": "src/index.html",
-  "main": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel",
     "dev": "parcel ./src/index.html",
     "build": "parcel build"
   },
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "parcel": "^2.9.3"
+  },
   "devDependencies": {
-    "parcel": "^1.12.4",
-    "parcel-bundler": "^1.3.1",
-    "posthtml": "^0.16.6",
     "posthtml-expressions": "^1.11.1",
-    "posthtml-include": "^1.7.4",
-    "posthtml-load-config": "^2.0.0"
+    "posthtml-include": "^1.7.4"
   }
 }
