--- a/practice-one/package.json
+++ b/practice-one/package.json
@@ -7,10 +7,8 @@
     "dev": "parcel ./src/index.html",
     "build": "parcel build"
   },
-  "dependencies": {
-    "parcel": "^2.9.3"
-  },
   "devDependencies": {
+    "parcel": "^2.9.3",
     "posthtml-expressions": "^1.11.1",
     "posthtml-include": "^1.7.4"
   }
