--- a/practice-one/package.json
+++ b/practice-one/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "parcel",
     "dev": "parcel ./src/index.html",
-    "build": "parcel build"
+    "build": "rm -rf build && rm -rf .parcel-cache && parcel build ./src/index.html --no-cache --no-source-maps --dist-dir dist"
   },
   "devDependencies": {
     "parcel": "^2.9.3",
